--- a/tareacajasgr02.css
+++ b/tareacajasgr02.css
@@ -1,3 +1,5 @@
+/* Contenedor General */
+
 .p01{
   display: grid;
   grid-template-columns:20% auto 160px;
@@ -8,6 +10,8 @@
   margin-left: auto;
   margin-right: auto;
   }
+
+/* Las Cajas */
 
 .box1{
   background-color: #ffccb3;
@@ -34,6 +38,8 @@
   grid-column: 1/4;
   grid-area: box5
 }
+
+/* Responsive cajas movimiento */
 
 @media(min-width:700px){
   .p01{
